--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "preview-picker",
+  "name": "material-multi-picker",
   "version": "0.1.0",
   "description": "A multiselect component that loads dynamic previews",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/atropos-tech/preview-picker.git"
+    "url": "https://github.com/atropos-tech/material-multi-picker.git"
   },
   "scripts": {
     "test": "jest --watch --coverage",
     "sandbox": "webpack-dev-server --config webpack.config.js --hot --inline --color --progress --open --mode development",
-    "transpile": "babel src --out-dir lib --ignore \"src/**/*.spec.js\",\"src/sandbox.js\"",
+    "transpile": "babel src --out-dir lib --ignore \"src/**/*.spec.js\",\"src/sandbox/**/*",
     "lint": "eslint src",
     "start": "npm run sandbox"
   },
@@ -22,11 +22,7 @@
   "dependencies": {
     "create-react-class": "^15.6.3",
     "downshift": "^3.2.0",
-    "keycode": "^2.2.0",
-    "lodash": "^4.17.11",
-    "react-redux": "^5.1.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "keycode": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
