--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/atropos-tech/material-multi-picker.git"
   },
+  "bugs": {
+    "url": "https://github.com/atropos-tech/material-multi-picker/issues"
+  },
   "scripts": {
     "test": "jest --watch --coverage",
     "sandbox": "webpack-dev-server --config webpack.config.js --hot --inline --color --progress --open --mode development",
@@ -15,16 +18,17 @@
     "start": "npm run sandbox"
   },
   "keywords": [
-    "component"
+    "react-component", "react", "downshift", "picker", "material-ui"
   ],
   "author": "Duncan Thacker (duncan.thacker@atropos.co.uk)",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "create-react-class": "^15.6.3",
     "downshift": "^3.2.0",
     "keycode": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
