--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "webpack-dev-server": "^3.1.14"
   },
   "peerDependencies": {
-    "react": "^15.6"
+    "react": "^16.0",
+    "@material-ui/core": "^3.0"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "jest-enzyme",
