--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.1",
     "react-highlight-words": "^0.16.0",
+    "react-jss": "^8.6.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
