--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "test": "jest --watch --coverage",
+    "test-ci": "jest --coverage",
     "sandbox": "webpack-dev-server --config webpack.config.js --hot --inline --color --progress --open --mode development",
     "transpile": "babel src --out-dir lib --ignore \"src/**/*.spec.js\",\"src/sandbox/**/*",
     "lint": "eslint src",
