--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
   "license": "MIT",
   "dependencies": {
     "create-react-class": "^15.6.3",
-    "downshift": "^3.2.2",
-    "keycode": "^2.2.0"
+    "downshift": "^3.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
