--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "jest": "^24.1.0",
     "jest-environment-enzyme": "^7.0.1",
     "jest-enzyme": "^7.0.1",
+    "js-string-escape": "^1.0.1",
     "prop-types": "^15.6.2",
     "raw-loader": "^1.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-highlight-words": "^0.16.0",
     "react-jss": "^8.6.1",
+    "react-syntax-highlighter": "^10.1.2",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
