--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test-ci": "jest --coverage --no-cache --runInBand",
     "sandbox": "webpack-dev-server --config webpack.config.js --hot --inline --color --progress --open --mode development",
     "transpile": "babel src --out-dir lib --ignore \"src/**/*.spec.js\",\"src/sandbox/**/*",
+    "build-docs": "rimraf ./docs && webpack --config webpack.config.js --mode=production && copyfiles -u ./public/* ./docs",
     "lint": "eslint src",
     "start": "npm run sandbox"
   },
@@ -39,6 +40,7 @@
     "@babel/runtime": "^7.3.1",
     "@material-ui/core": "^3.9.2",
     "babel-loader": "^8.0.5",
+    "copyfiles": "^2.1.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^5.13.0",
@@ -58,7 +60,9 @@
     "react-highlight-words": "^0.16.0",
     "react-jss": "^8.6.1",
     "react-syntax-highlighter": "^10.1.2",
+    "rimraf": "^2.6.3",
     "webpack": "^4.29.3",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
