--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test-ci": "jest --coverage --no-cache --runInBand",
     "sandbox": "webpack-dev-server --config webpack.config.js --hot --inline --color --progress --open --mode development",
     "transpile": "babel src --out-dir lib --ignore \"src/**/*.spec.js\",\"src/sandbox/**/*",
-    "build-docs": "rimraf ./docs && webpack --config webpack.config.js --mode=production && copyfiles -u ./public/* ./docs",
+    "build-docs": "rimraf ./docs && webpack --config webpack.config.js --mode=production && copyfiles -u 1 ./public/* ./docs",
     "lint": "eslint src",
     "start": "npm run sandbox"
   },
