--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/atropos-tech/material-multi-picker"
   },
+  "homepage": "https://atropos-tech.github.io/material-multi-picker/index.html",
   "bugs": {
     "url": "https://github.com/atropos-tech/material-multi-picker/issues"
   },
@@ -53,6 +54,7 @@
     "jest-environment-enzyme": "^7.0.1",
     "jest-enzyme": "^7.0.1",
     "js-string-escape": "^1.0.1",
+    "loader-utils": "^1.2.3",
     "prop-types": "^15.6.2",
     "raw-loader": "^1.0.0",
     "react": "^16.8.1",
