Use demo-source-loader package instead of internal one

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@material-ui/core": "^3.9.2",
     "babel-loader": "^8.0.5",
     "copyfiles": "^2.1.0",
+    "demo-source-loader": "^0.1.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^5.13.0",
@@ -53,8 +54,6 @@
     "jest": "^24.1.0",
     "jest-environment-enzyme": "^7.0.1",
     "jest-enzyme": "^7.0.1",
-    "js-string-escape": "^1.0.1",
-    "loader-utils": "^1.2.3",
     "prop-types": "^15.6.2",
     "raw-loader": "^1.0.0",
     "react": "^16.8.1",
