--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "license": "MIT",
   "dependencies": {
     "create-react-class": "^15.6.3",
-    "downshift": "^3.2.2"
+    "downshift": "^3.2.2",
+    "react-debounce-render": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
