--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,12 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.4.1
+      - image: circleci/node:11.9.0
     steps:
       - checkout
-      - run: echo "A first hello"
+      - run: npm install
+      - run: npm run lint
+      - run: npm test
+      - persist_to_workspace:
+        root: .
+        paths: coverage
