--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,6 @@ jobs:
       - run: npm run lint
       - run: npm test
       - persist_to_workspace:
-        root: .
-        paths: coverage
+          root: .
+          paths: 
+            - coverage
