--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,18 @@ jobs:
     steps:
       - checkout
       - run: npm install
+
+  test:
+    docker:
+      - image: circleci/node:11.9.0
+    steps:
       - run: npm run lint
-      - run: npm test
-      - persist_to_workspace:
-          root: .
-          paths: 
-            - coverage
+      - run:
+        name: Run jest tests with JUnit as reporter
+        command: npm test
+        environment:
+          JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
+      - store_test_results:
+        path: reports
+      - store_artifacts:
+          path: coverage
