--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "jest --watch --coverage --no-cache --runInBand",
-    "test-ci": "jest --coverage --no-cache --runInBand",
+    "test-ci": "jest --coverage --ci --no-cache --runInBand --reporters=jest-junit",
     "dev-docs": "webpack-dev-server --config webpack.config.js --hot --inline --color --progress --open --mode development",
     "transpile": "babel src --out-dir lib --ignore \"src/**/*.spec.js\"",
     "build-docs": "rimraf ./docs && webpack --config webpack.config.js --mode=production && copyfiles -u 1 ./public/* ./docs",
@@ -55,6 +55,7 @@
     "jest": "^24.1.0",
     "jest-environment-enzyme": "^7.0.1",
     "jest-enzyme": "^7.0.1",
+    "jest-junit": "^6.2.1",
     "prop-types": "^15.7.1",
     "raw-loader": "^1.0.0",
     "react": "^16.8.1",
