--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-multi-picker",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A typeahead multiselect component for React and Material UI",
   "main": "lib/index.js",
   "repository": {
@@ -60,6 +60,7 @@
     "prop-types": "^15.7.1",
     "raw-loader": "^1.0.0",
     "react": "^16.8.1",
+    "react-curry-component": "^0.2.0",
     "react-dom": "^16.8.1",
     "react-highlight-words": "^0.16.0",
     "react-jss": "^8.6.1",
