--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,13 @@
         "es6": true
     },
     "parserOptions": {
-        "ecmaVersion": 9,
+        "ecmaVersion": 2018,
         "sourceType": "module",        
         "ecmaFeatures": {
             "jsx": true
         }
     },
+    "parser": "babel-eslint",
     "plugins": ["jest", "import", "react", "promise"],
     "extends": ["plugin:jest/recommended", "plugin:promise/recommended", "plugin:react/recommended", "eslint:recommended"],
     "settings": {
