--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.3.1",
     "@material-ui/core": "^3.9.2",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "codecov": "^3.2.0",
     "copyfiles": "^2.1.0",
