--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-curry-component": "^1.1.0",
     "react-dom": "^16.8.3",
     "react-highlight-words": "^0.16.0",
+    "react-hot-loader": "^4.7.2",
     "react-jss": "^8.6.1",
     "react-markdown": "^4.0.6",
     "react-syntax-highlighter": "^10.1.3",
