Fix incorrect transpile script. Prepare for 1.5.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-multi-picker",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "A typeahead multiselect component for React and Material UI",
   "main": "lib/index.js",
   "repository": {
@@ -15,7 +15,7 @@
     "test": "jest --watch --coverage --no-cache --runInBand",
     "test-ci": "jest --coverage --ci --no-cache --runInBand --reporters=jest-junit && codecov",
     "dev-docs": "webpack-dev-server --config webpack.config.js --hot --inline --color --progress --open --mode development",
-    "transpile": "babel src --out-dir lib --ignore \"src/**/*.spec.js\"",
+    "transpile": "rimraf ./lib && babel src --out-dir lib --ignore \"src/**/*.spec.js\"",
     "build-docs": "rimraf ./docs && webpack --config webpack.config.js --mode=production --devtool source-maps && copyfiles -u 1 ./public/* ./docs",
     "lint": "eslint src",
     "start": "npm run dev-docs"
