--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-multi-picker",
-  "version": "1.5.2",
+  "version": "1.6.0",
   "description": "A typeahead multiselect component for React and Material UI",
   "main": "lib/index.js",
   "repository": {
@@ -65,7 +65,10 @@
     "react-hot-loader": "^4.7.2",
     "react-jss": "^8.6.1",
     "react-markdown": "^4.0.6",
+    "react-redux": "^6.0.1",
     "react-syntax-highlighter": "^10.1.3",
+    "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "rimraf": "^2.6.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
