--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-multi-picker",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "description": "A typeahead multiselect component for React and Material UI",
   "main": "lib/index.js",
   "repository": {
@@ -56,16 +56,17 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
-    "jest": "^24.1.0",
-    "jest-environment-enzyme": "^7.0.1",
-    "jest-enzyme": "^7.0.1",
+    "jest": "^24.3.0",
+    "jest-environment-enzyme": "^7.0.2",
+    "jest-enzyme": "^7.0.2",
     "jest-junit": "^6.3.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
+    "raw-loader": "^1.0.0",
+    "react": "^16.8.4",
     "react-curry-component": "^1.1.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.4",
     "react-highlight-words": "^0.16.0",
-    "react-hot-loader": "^4.7.2",
+    "react-hot-loader": "^4.8.0",
     "react-jss": "^8.6.1",
     "react-markdown": "^4.0.6",
     "react-redux": "^6.0.1",
