--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.8.0",
   "description": "A typeahead multiselect component for React and Material UI",
   "main": "lib/index.js",
+  "files": [ "/lib" ],
   "repository": {
     "type": "git",
     "url": "https://github.com/atropos-tech/material-multi-picker"
