--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.8.0",
   "description": "A typeahead multiselect component for React and Material UI",
   "main": "lib/index.js",
-  "files": [ "/lib" ],
+  "files": [
+    "/lib"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/atropos-tech/material-multi-picker"
@@ -39,10 +41,10 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.1",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.3.4",
+    "@babel/runtime": "^7.4.0",
     "@material-ui/core": "^3.9.2",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
@@ -51,7 +53,7 @@
     "demo-source-loader": "^0.1.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "eslint": "^5.15.2",
+    "eslint": "^5.15.3",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-promise": "^4.0.1",
@@ -62,7 +64,7 @@
     "jest-enzyme": "^7.0.2",
     "jest-junit": "^6.3.0",
     "prop-types": "^15.7.2",
-    "raw-loader": "^1.0.0",
+    "raw-loader": "^2.0.0",
     "react": "^16.8.4",
     "react-curry-component": "^1.1.0",
     "react-dom": "^16.8.4",
