--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-multi-picker",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "description": "A typeahead multiselect component for React and Material UI",
   "main": "lib/index.js",
   "files": [
@@ -15,8 +15,8 @@
     "url": "https://github.com/atropos-tech/material-multi-picker/issues"
   },
   "scripts": {
-    "test": "jest --watch --coverage --no-cache --runInBand",
-    "test-ci": "jest --coverage --ci --no-cache --runInBand --reporters=jest-junit && codecov",
+    "test": "jest --watch --coverage",
+    "test-ci": "jest --coverage --ci --reporters=jest-junit && codecov",
     "dev-docs": "webpack-dev-server --config webpack.config.js --hot --inline --color --progress --open --mode development",
     "transpile": "rimraf ./lib && babel src --out-dir lib --ignore \"src/**/*.spec.js\"",
     "build-docs": "rimraf ./docs && webpack --config webpack.config.js --mode=production --devtool source-maps && copyfiles -u 1 ./public/* ./docs",
@@ -36,54 +36,54 @@
   "author": "Duncan Thacker (duncan.thacker@atropos.co.uk)",
   "license": "MIT",
   "dependencies": {
-    "downshift": "^3.2.7",
+    "downshift": "^3.2.10",
     "react-debounce-render": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.4.3",
+    "@babel/runtime": "^7.5.0",
     "@material-ui/core": "^3.9.3",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "codecov": "^3.3.0",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "codecov": "^3.5.0",
     "copyfiles": "^2.1.0",
     "demo-source-loader": "^0.1.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.12.4",
-    "file-loader": "^3.0.1",
-    "jest": "^24.7.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.0.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jest": "^22.7.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.2",
+    "file-loader": "^4.0.0",
+    "jest": "^24.8.0",
     "jest-environment-enzyme": "^7.0.2",
     "jest-enzyme": "^7.0.2",
-    "jest-junit": "^6.3.0",
+    "jest-junit": "^6.4.0",
     "prop-types": "^15.7.2",
-    "raw-loader": "^2.0.0",
+    "raw-loader": "^3.0.0",
     "react": "^16.8.6",
     "react-curry-component": "^1.1.0",
     "react-dom": "^16.8.6",
     "react-highlight-words": "^0.16.0",
-    "react-hot-loader": "^4.8.4",
+    "react-hot-loader": "^4.12.3",
     "react-jss": "^8.6.1",
-    "react-markdown": "^4.0.8",
-    "react-redux": "^7.0.2",
-    "react-syntax-highlighter": "^10.2.1",
+    "react-markdown": "^4.1.0",
+    "react-redux": "^7.1.0",
+    "react-syntax-highlighter": "^11.0.1",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.0",
+    "redux-form": "^8.2.4",
     "rimraf": "^2.6.3",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "peerDependencies": {
-    "react": "^16.3",
-    "@material-ui/core": "^3.0"
+    "react": "^16.8",
+    "@material-ui/core": "^4.1"
   },
   "jest": {
     "setupFilesAfterEnv": [
