--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-multi-picker",
-  "version": "1.8.3",
+  "version": "1.8.4",
   "description": "A typeahead multiselect component for React and Material UI",
   "main": "lib/index.js",
   "files": [
@@ -18,7 +18,7 @@
     "test": "jest --watch --coverage",
     "test-ci": "jest --coverage --ci --reporters=jest-junit && codecov",
     "dev-docs": "webpack-dev-server --config webpack.config.js --hot --inline --color --progress --open --mode development",
-    "transpile": "rimraf ./lib && babel src --out-dir lib --ignore \"src/**/*.spec.js\"",
+    "transpile": "rimraf ./lib && cross-env BABEL_ENV=production babel src --out-dir lib --ignore \"src/**/*.spec.js\"",
     "build-docs": "rimraf ./docs && webpack --config webpack.config.js --mode=production --devtool source-maps && copyfiles -u 1 ./public/* ./docs",
     "lint": "eslint src",
     "start": "npm run dev-docs"
@@ -50,6 +50,7 @@
     "babel-loader": "^8.0.6",
     "codecov": "^3.5.0",
     "copyfiles": "^2.1.1",
+    "cross-env": "^5.2.0",
     "demo-source-loader": "^0.1.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -82,8 +83,8 @@
     "webpack-dev-server": "^3.7.2"
   },
   "peerDependencies": {
-    "react": "^16.8",
-    "@material-ui/core": "^4.2"
+    "react": ">=16.4",
+    "@material-ui/core": ">=3"
   },
   "jest": {
     "setupFilesAfterEnv": [
