--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-multi-picker",
-  "version": "1.8.5",
+  "version": "2.0.0",
   "description": "A typeahead multiselect component for React and Material UI",
   "main": "lib/index.js",
   "files": [
@@ -37,7 +37,8 @@
   "license": "MIT",
   "dependencies": {
     "downshift": "^3.2.10",
-    "react-debounce-render": "^5.0.0"
+    "react-debounce-render": "^5.0.0",
+    "use-state-with-callback": "^1.0.18"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -83,7 +84,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "peerDependencies": {
-    "react": ">=16.4",
+    "react": ">=16.8",
     "@material-ui/core": ">=3"
   },
   "jest": {
