--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-multi-picker",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "A typeahead multiselect component for React and Material UI",
   "main": "lib/index.js",
   "files": [
@@ -84,6 +84,7 @@
   },
   "peerDependencies": {
     "react": ">=16.8",
+    "react-dom": ">=16.8",
     "@material-ui/core": ">=3"
   },
   "jest": {
